tests/compile_fail/invalid_order_by_columns.stderr
error[E0277]: the trait bound `diesel::query_builder::SelectStatement<schema::users::table, diesel::query_builder::select_clause::SelectClause<(schema::users::columns::firstname, schema::users::columns::id, schema::users::columns::lastname, schema::users::columns::slug)>>: diesel::query_dsl::select_dsl::SelectDsl<schema::follows::columns::id>` is not satisfied
  --> $DIR/invalid_order_by_columns.rs:50:10
   |
50 |         .load::<User>(&db)
   |          ^^^^ the trait `diesel::query_dsl::select_dsl::SelectDsl<schema::follows::columns::id>` is not implemented for `diesel::query_builder::SelectStatement<schema::users::table, diesel::query_builder::select_clause::SelectClause<(schema::users::columns::firstname, schema::users::columns::id, schema::users::columns::lastname, schema::users::columns::slug)>>`
   |
   = help: the following implementations were found:
             <diesel::query_builder::SelectStatement<F, S, D, W, O, L, Of, G, LC> as diesel::query_dsl::select_dsl::SelectDsl<Selection>>
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<diesel::pg::Pg>` for `diesel_keyset_pagination::KeysetPaginated<diesel::query_builder::SelectStatement<schema::users::table, diesel::query_builder::select_clause::SelectClause<(schema::users::columns::firstname, schema::users::columns::id, schema::users::columns::lastname, schema::users::columns::slug)>>, schema::follows::columns::id, i32, schema::users::columns::id>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<_, User>` for `diesel_keyset_pagination::KeysetPaginated<diesel::query_builder::SelectStatement<schema::users::table, diesel::query_builder::select_clause::SelectClause<(schema::users::columns::firstname, schema::users::columns::id, schema::users::columns::lastname, schema::users::columns::slug)>>, schema::follows::columns::id, i32, schema::users::columns::id>`

For more information about this error, try `rustc --explain E0277`.
